fixed landing text not showing up on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -137,9 +137,9 @@ body {
       width: 140px;
     }
   
-    .content .text {
+    /* .content .text {
       display: none;
-    }
+    } */
   
     .grid-4,
     .grid-2 {
